--- a/Restaurant-Application-курсак/Restaurant Application/MainWindow.xaml
+++ b/Restaurant-Application-курсак/Restaurant Application/MainWindow.xaml
@@ -13,24 +13,24 @@
             </StackPanel>
         </Border>
         <Border BorderBrush="DarkBlue" DockPanel.Dock="Left" BorderThickness="0.1">
-            <StackPanel Background="AliceBlue" MinWidth="150">
-                <Label FontSize="24" Height="50" HorizontalContentAlignment="Left" VerticalContentAlignment="Bottom" 
-                       Foreground="#FF14B0BF" FontWeight="Bold" FontStyle="Italic">Menu</Label>
+            <StackPanel Background="#eac8b5" MinWidth="150">
+                <Label FontSize="24" Height="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Background="#eac8b5"
+                       Foreground="#db6a68" FontWeight="Bold" FontStyle="Italic">Menu</Label>
 
                 <Button Name="AddItem" Command="{Binding GetFoodListCommand}" Content="Додати нову страву" Height="50" 
-                        Click="AddItems_Click" Background="Beige" Foreground="Green" FontSize="12" FontWeight="Bold"/>
+                        Click="AddItems_Click" Background="#d9a5b3" Foreground="#0e1620" FontSize="12" FontWeight="Bold"/>
                 <Button Name="PlaceNewOrder" Content="Нове замовлення" Height="50"
-                        Click="PlaceNewOrder_Click" Background="Beige" Foreground="Red" FontSize="12" FontWeight="Bold"/>
+                        Click="PlaceNewOrder_Click" Background="#d9a5b3" Foreground="#0e1620" FontSize="12" FontWeight="Bold"/>
                 <Button Name="UpdateOrder" Content="Оновлення замовлення" Height="50"
-                        Click="UpdateOrder_Click" Background="Beige" Foreground="Chocolate" FontSize="12" FontWeight="Bold"/>
+                        Click="UpdateOrder_Click" Background="#d9a5b3" Foreground="#0e1620" FontSize="12" FontWeight="Bold"/>
                 <Button Name="GenerateBill" Content="Оплата" Height="50"
-                        Click="GenerateBill_Click" Background="Beige" Foreground="HotPink" FontSize="12" FontWeight="Bold"/>
+                        Click="GenerateBill_Click" Background="#d9a5b3" Foreground="#0e1620" FontSize="12" FontWeight="Bold"/>
             </StackPanel>
         </Border>
         <Border BorderBrush="DarkBlue" BorderThickness="0.1" DockPanel.Dock="Top">
             <StackPanel Background="Turquoise">
-                <Label BorderBrush="Black" FontSize="24" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" 
-                       Foreground="OrangeRed">Easy order</Label>
+                <Label BorderBrush="Black" FontSize="24" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold"  FontStyle="Italic"
+                       Foreground="#f3f0e2" Background="#db6a68" Height="50">Easy order</Label>
             </StackPanel>
         </Border>
         <Grid RenderTransformOrigin="0.5,0.5">
@@ -38,7 +38,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Frame Background="AliceBlue" Grid.Row="0" Name="MainFrame" NavigationUIVisibility="Hidden" Grid.RowSpan="2"/>
+            <Frame Background="#f3f0e2" Grid.Row="0" Name="MainFrame" NavigationUIVisibility="Hidden" Grid.RowSpan="2"/>
         </Grid>
     </DockPanel>
     
