--- a/Restaurant-Application-курсак/Restaurant Application/Page Screens/GenerateBill.xaml
+++ b/Restaurant-Application-курсак/Restaurant Application/Page Screens/GenerateBill.xaml
@@ -16,7 +16,7 @@
                 <ColumnDefinition Width="428*"/>
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="comboBox" 
-                      ItemsSource="{Binding AllTablelist}" SelectedItem="{Binding STableList}" SelectedValuePath="TableID" DisplayMemberPath="TableName" 
+                      ItemsSource="{Binding Tablelist}" SelectedItem="{Binding STableList}" SelectedValuePath="TableID" DisplayMemberPath="TableName" 
                       HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="83.789,10,0,0" Grid.Column="1"/>
             <Button x:Name="button" Command="{Binding GenerateFoodBill}" Content="Рахунок" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="222.789,10,0,0" Grid.Column="1"/>
             <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" 
