--- a/Restaurant-Application-курсак/Restaurant Application/Page Screens/NewOrderPlace.xaml
+++ b/Restaurant-Application-курсак/Restaurant Application/Page Screens/NewOrderPlace.xaml
@@ -34,7 +34,7 @@
                 <Label Foreground="#FF111010" Grid.Row="1" Grid.ColumnSpan="2" Margin="18,15,104,1" FontWeight="Bold" Content="Назва: " Grid.RowSpan="2"/>
                 <ComboBox x:Name="fooditem" ItemsSource="{Binding Foodlist}" SelectedItem="{Binding SFoodList}" SelectedValuePath="FoodID" DisplayMemberPath="FoodName"
                           VerticalAlignment="Top"  Grid.Column="1" Margin="32,16,25,0" Grid.RowSpan="2" Grid.Row="1" Grid.ColumnSpan="2"/>
-                <Label Foreground="#FF111010" Grid.Row="2" Margin="17,53,5,-53" FontWeight="Bold" Content="Кільцість :"/>
+                <Label Foreground="#FF111010" Grid.Row="2" Margin="17,53,5,-53" FontWeight="Bold" Content="Кількість :"/>
                 <TextBox Text="{Binding SelectedOrderItem.Quantity, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" 
                                 x:Name="Quantitytxt" Width="240" BorderBrush="AliceBlue" BorderThickness="1" Grid.Row="1" Grid.Column="1" AcceptsReturn="True" Margin="28,52,6,-57" Grid.ColumnSpan="2" Grid.RowSpan="2" />
                 <Button x:Name="AddItem" Height="25" Width="105" Content="Додати" Margin="16,122,91,-106" Grid.Row="2" Grid.ColumnSpan="2" Click="AddItem_Click"/>
